Added:     - Handling of aa_decode_steps=0     - Changed 'squeue' frequency of pipline script to once a minute     - Changed default frame noise scale to 1.0     - Added 'save_forward_diffusion.py' for saving of forward trajectories     - Modified parse_pdb to permit use with save_forward_diffusion.py

--- a/config/inference/base.yaml
+++ b/config/inference/base.yaml
@@ -100,7 +100,7 @@ seqdiffuser:
 
 denoiser:
   noise_scale_ca: 1
-  noise_scale_frame: 0.5 # used to be noise_level
+  noise_scale_frame: 1
   noise_scale_torsion: 1
 
 ppi:
