Added:     - Sampler for JW-style self conditioning (added as separate sampler as we're not sure yet how best to do self conditioning, and because preprocess etc is being currently refactored.

--- a/config/inference/base.yaml
+++ b/config/inference/base.yaml
@@ -26,6 +26,7 @@ inference:
   align_motif: True
   autoregressive_confidence: True
   no_confidence: True
+  use_jw_selfcond: False
 
 contigmap:
   contigs: ['20', 'A3-23', '30']
