Added ability to end at provided step ("final_step"), and changed recycle_schedule delimiter to make compatible with benchmark script

--- a/config/inference/base.yaml
+++ b/config/inference/base.yaml
@@ -28,6 +28,7 @@ inference:
   no_confidence: True
   use_jw_selfcond: False
   symmetric_self_cond: True
+  final_step: 1
 
 contigmap:
   contigs: ['20', 'A3-23', '30']
