--- a/config/inference/base.yaml
+++ b/config/inference/base.yaml
@@ -8,7 +8,8 @@ inference:
   #ckpt_path: /mnt/home/davidcj/projects/BFF/rf_diffusion/checkpoints/train_session2022-08-12_1660310517.2802267/BFF_0.pt
   #ckpt_path: /mnt/net/databases/diffusion/models/Diff_t1d_31_t2d_47_082222_epoch19.pt
   #ckpt_path: /net/databases/diffusion/models/Diff_t1d_32_t2d_47_disp_fixed_finetuned_082622_epoch10.pt
-  ckpt_path: /net/databases/diffusion/models/Diff_rollback_epoch8.pt
+  #ckpt_path: /net/databases/diffusion/models/Diff_rollback_epoch8.pt
+  ckpt_path: /net/databases/diffusion/nate_tmp/new_SelfCond_crdscale0.25/models/BFF_4.pt
   ppi_design: False
   autogenerate_contigs: False
   symmetry: null
@@ -20,7 +21,7 @@ inference:
   softmax_T: 1e-5
   output_prefix: samples/design
   scaffold_guided: False
-  model_runner: default
+  model_runner: NRBStyleSelfCond
   cautious: False
   recycle_between: False
   align_motif: True
