--- a/config/inference/base.yaml
+++ b/config/inference/base.yaml
@@ -54,33 +54,36 @@ model:
   d_hidden: 32
   d_hidden_templ: 32
   p_drop: 0.15
-  SE3_param_full:
-    num_layers: 1
-    num_channels: 32
-    num_degrees: 2
-    n_heads: 4
-    div: 4
-    l0_in_features: 8
-    l0_out_features: 8
-    l1_in_features: 3
-    l1_out_features: 2
-    num_edge_features: 32
-  SE3_param_topk:
-    num_layers: 1
-    num_channels: 32
-    num_degrees: 2
-    n_heads: 4
-    div: 4
-    l0_in_features: 64
-    l0_out_features: 64
-    l1_in_features: 3
-    l1_out_features: 2
-    num_edge_features: 64
-  d_time_emb: null
-  d_time_emb_proj: null
+  SE3_param:
+    num_layers: -1
+    num_channels: -1
+    num_degrees: -1
+    n_heads: -1
+    div: -1
+    l0_in_features: -1
+    l0_out_features: -1
+    l1_in_features: -1
+    l1_out_features: -1
+    num_edge_features: -1
+  SE3_ref_param:
+    n_extra_block: -1
+    n_main_block: -1
+    n_ref_block: -1
+    n_finetune_block: -1
+    d_msa: -1
+    d_msa_full: -1
+    d_pair: -1
+    d_templ: -1
+    n_head_msa: -1
+    n_head_pair: -1
+    n_head_templ: -1
+    d_hidden: -1
+    d_hidden_templ: -1
+    p_drop: -1
+    use_extra_l1: -1
+    use_atom_frames: -1
+    freeze_track_motif: -1
   freeze_track_motif: False
-  use_motif_timestep: False
-  input_seq_onehot: False
 
 diffuser:
   T: 200
