Diffusion harness refactor for inference.

--- a/config/inference/unconditional.yaml
+++ b/config/inference/unconditional.yaml
@@ -2,8 +2,9 @@ defaults:
   - aa
 
 inference:
+  design_startnum: -1
   num_designs: 1
-  output_prefix: test_deterministic/run1
+  output_prefix: debug/unconditional_l60_t200
   model_runner: NRBStyleSelfCond
   input_pdb: /home/ahern/projects/rf_diffusion/benchmark/input/5kax.pdb
 
