--- a/config/inference/base.yaml
+++ b/config/inference/base.yaml
@@ -33,6 +33,8 @@ inference:
   feed_true_xt: False
   annotate_termini: True
   deterministic: False
+  zero_weights: False
+  ligand: null
 
 contigmap:
   contigs: ['20', 'A3-23', '30']
