--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,5 @@
 [submodule "RF2-allatom"]
 	path = RF2-allatom
-	url = https://git.ipd.uw.edu/jue/RF2-allatom.git
+    url = https://git.ipd.uw.edu/jue/RF2-allatom.git
+    update = rebase
+    branch = diffusion-ready
