Theozyme with BB and ligand scaffolding working.
Run: `python run_inference.py --config-name gaa`

--- a/config/inference/aa.yaml
+++ b/config/inference/aa.yaml
@@ -3,5 +3,6 @@ defaults:
   - base
 
 inference:
-  ckpt_path: /home/ahern/projects/rf_diffusion/train_session2022-12-21_1671693497.0063982/models/BFF_4.pt
+  ckpt_path: /home/ahern/projects/rf_diffusion/train_session2023-01-09_1673291857.7027779/models/BFF_4.pt
+  align_motif: False
   str_self_cond: True
