Update branch to point to main

--- a/.gitmodules
+++ b/.gitmodules
@@ -2,4 +2,4 @@
 	path = RF2-allatom
     url = https://git.ipd.uw.edu/jue/RF2-allatom.git
     update = rebase
-    branch = diffusion-ready
+    branch = main
