Aa tip contigs (#90)
This branch adds in new contig features for partial side chain inference
using aa diffusion and adds in atomization into the insert contig
function

---------

Co-authored-by: Rohith Krishna <rohith@digs>
Co-authored-by: Rohith Krishna <rohith@digs.ipd.uw.edu>
Co-authored-by: Jue Wang <jue@uw.edu>

--- a/config/inference/base.yaml
+++ b/config/inference/base.yaml
@@ -35,6 +35,7 @@ inference:
   deterministic: False
   zero_weights: False
   ligand: null
+  atomized_output: False
 
 contigmap:
   contigs: ['20', 'A3-23', '30']
