--- a/config/inference/aa.yaml
+++ b/config/inference/aa.yaml
@@ -3,6 +3,6 @@ defaults:
   - base
 
 inference:
-  ckpt_path: /home/ahern/projects/rf_diffusion/train_session2023-01-09_1673291857.7027779/models/BFF_10.pt
+  ckpt_path: /home/rohith/rf2a-fd3/models/BFF_10_remapped.pt
   align_motif: False
   str_self_cond: True
