--- a/config/inference/base.yaml
+++ b/config/inference/base.yaml
@@ -37,6 +37,9 @@ inference:
   ligand: null
   atomized_output: False
   ema: True
+  contig_as_guidepost: False
+  remove_guideposts_from_output: True
+  state_dict_to_load: model_state_dict
 
 contigmap:
   contigs: ['20', 'A3-23', '30']
