Enable training and inference with randomized frames

--- a/config/inference/base.yaml
+++ b/config/inference/base.yaml
@@ -159,6 +159,7 @@ preprocess:
   str_self_cond: False
   seq_self_cond: False
   predict_previous: False
+  randomize_frames: False
   
 logging:
   inputs: False
