First 3template commit - add masking task + features
Creating new masking function to generate t2d masks that have
discontiguous masks, and allow motif chunks to either see or not see
each other some fraction of the time. Also added features to both 2d and
1d template features, marking motifs as such.

--- a/config/inference/base.yaml
+++ b/config/inference/base.yaml
@@ -160,6 +160,7 @@ preprocess:
   seq_self_cond: False
   predict_previous: False
   randomize_frames: False
+  motif_only_2d: False
   
 logging:
   inputs: False
