--- a/config/inference/asym_multi.yaml
+++ b/config/inference/asym_multi.yaml
@@ -3,7 +3,7 @@ defaults:
   - aa
 
 inference:
-  ckpt_path: /home/afavor/git/RFD_AF/models/afavs/nucleic_full/BFF_1.20.pt
+  ckpt_path: /projects/ml/afavor/RFD/models/all_na_scaffolding/train_session2023-10-29_1698607368.2375839BFF_2.80.pt
   str_self_cond: True
   model_runner: NRBStyleSelfCond
   two_template: True
@@ -16,13 +16,13 @@ inference:
   supply_motif_seq: True
   mask_seq_by_polymer: True
   num_atoms_modeled: 23
-  num_atoms_saved: 23
+  num_atoms_saved: 13
 
   # align_motif: False
 
 preprocess:
   eye_frames: True
-  num_atoms_na: 23
+  num_atoms_na: 3
 
 contigmap:
   contigs: ['2', 'A374-380' ,'5' , 'B410-415', '3']
