--- a/config/inference/multi_polymer.yaml
+++ b/config/inference/multi_polymer.yaml
@@ -3,11 +3,7 @@ defaults:
   - aa
 
 inference:
-  ckpt_path: /projects/ml/afavor/RFD/models/all_na_scaffolding/train_session2023-10-29_1698607368.2375839BFF_2.60.pt
-  # ckpt_path: /projects/ml/afavor/RFD/models/all_na_scaffolding/train_session2023-10-29_1698607368.2375839BFF_2.20.pt
-  # ckpt_path: /projects/ml/afavor/RFD/models/all_na_scaffolding/train_session2023-10-29_1698607368.2375839BFF_3.00.pt
-  # ckpt_path: /projects/ml/afavor/RFD/models/all_na_scaffolding/train_session2023-10-29_1698607368.2375839BFF_2.40.pt
-  # ckpt_path: /projects/ml/afavor/RFD/models/all_na_scaffolding/train_session2023-10-29_1698607368.2375839BFF_2.80.pt
+  ckpt_path: /projects/ml/afavor/RFD/models/all_na_ss_cond/train_session2023-12-15_1702680088_BFF_4.pt
   str_self_cond: True
   model_runner: NRBStyleSelfCond
   two_template: True
@@ -21,15 +17,25 @@ inference:
   mask_seq_by_polymer: True
   num_atoms_modeled: 23
   num_atoms_saved: 13
+  scaffold_guided: False
+  save_rna_oneletter: True
+
 
   # align_motif: False
 
 preprocess:
   eye_frames: True
   num_atoms_na: 12
+  motif_sidechain_input: True
+  d_t2d: 72
+  show_poly: True
+  d_t1d: 84
+  motif_only_2d: True
 
 contigmap:
-  contigs: ['2', 'A374-380' ,'5' , 'B410-415', '3']
+  contigs: ['30']
+  polymer_chains: ['rna']
+
 
 denoiser:
   noise_scale_frame: 0.9
@@ -37,3 +43,29 @@ denoiser:
 
 diffuser:
   T: 50
+
+
+scaffoldguided:
+  scaffoldguided: True
+  target_pdb: False
+  target_path: null
+  scaffold_list: null
+  scaffold_dir: null
+  sampled_insertion: 0
+  sampled_N: 0
+  sampled_C: 0
+  ss_mask: 0
+  systematic: False
+  contig_crop: null
+  radial_crop: null
+  target_ss: null
+  target_adj: null
+  mask_loops: True
+  target_ss_string: null
+  target_ss_pairs: null
+  target_ss_pair_ori: null
+  force_loops_list: null
+  force_multi_contacts: null
+  save_ss_matrix_png: False
+  # ss_cond_ckpt_path: /home/afavor/git/RFD_AF/3template_na/rf_diffusion/train_session2023-11-21_1700601321.4267492/models/BFF_3.pt
+  
