--- a/config/inference/base.yaml
+++ b/config/inference/base.yaml
@@ -226,7 +226,7 @@ scaffoldguided:
   target_ss_pair_ori: null
   force_loops_list: null
   force_multi_contacts: null
-  ss_cond_ckpt_path: /home/afavor/git/RFD_AF/models/afavs/RNA/ss_cond_eterna_distil/train_session2023-11-19_1700461070.5134563/BFF_1.pt
+  ss_cond_ckpt_path: /projects/ml/afavor/RFD/models/all_na_ss_cond/train_session2023-11-23_1700767971.921231_BFF_3.pt
 
   
 logging:
