--- a/config/inference/multi_polymer.yaml
+++ b/config/inference/multi_polymer.yaml
@@ -9,7 +9,7 @@ inference:
   two_template: True
   three_template: True
   cautious: True
-  input_pdb: /home/afavor/git/RFD_AF/inputs/DBP035.pdb
+  input_pdb: /projects/ml/afavor/test_data/DBP035.pdb
   ij_visible: null
   motif_only_2d: True
   chainbreak_chunks: True
@@ -34,7 +34,7 @@ preprocess:
 
 contigmap:
   contigs: ['30']
-  polymer_chains: ['rna']
+  polymer_chains: null
 
 
 denoiser:
