--- a/config/inference/base.yaml
+++ b/config/inference/base.yaml
@@ -71,6 +71,7 @@ inference:
   num_atoms_modeled: 14
   num_atoms_saved: 23
   save_rna_oneletter: False
+  set_diffused_resi_to_A: True
   # ema: True
 
 contigmap:
