--- a/config/inference/multi_polymer.yaml
+++ b/config/inference/multi_polymer.yaml
@@ -16,13 +16,19 @@ inference:
   supply_motif_seq: True
   mask_seq_by_polymer: True
   num_atoms_modeled: 23
-  num_atoms_saved: 13
+  num_atoms_saved: 23
   scaffold_guided: False
   save_rna_oneletter: True
   set_diffused_prot_to: 'ALA'
   set_diffused_dna_to: null
   set_diffused_rna_to: null
-
+  protein_protein_hotspot_res: null
+  dna_dna_hotspot_res: null
+  rna_rna_hotspot_res: null
+  protein_dna_hotspot_res: null
+  protein_rna_hotspot_res: null
+  dna_rna_hotspot_res: null
+  use_poly_hotspots_t1d: False
   # align_motif: False
 
 preprocess:
