--- a/config/inference/multi_polymer.yaml
+++ b/config/inference/multi_polymer.yaml
@@ -3,7 +3,9 @@ defaults:
   - aa
 
 inference:
-  ckpt_path: /projects/ml/afavor/RFD/models/all_na_ss_cond/train_session2023-12-15_1702680088_BFF_4.pt
+  # ckpt_path: /projects/ml/afavor/RFD/models/all_na_ss_cond/train_session2023-12-15_1702680088_BFF_4.pt
+  # ckpt_path: /projects/ml/afavor/RFD/models/all_na_ss_cond/train_session2024-01-24_1706161506_BFF_3.00.pt
+  ckpt_path: /projects/ml/afavor/RFD/models/all_na_ss_cond/train_session2024-03-04_1709582096_BFF_2.80.pt
   str_self_cond: True
   model_runner: NRBStyleSelfCond
   two_template: True
@@ -29,7 +31,7 @@ inference:
   protein_dna_hotspot_res: null
   protein_rna_hotspot_res: null
   dna_rna_hotspot_res: null
-  use_poly_hotspots_t1d: False
+  use_poly_hotspots_t1d: True
   compute_pSSA: False
   set_sequence: null
   assume_canonical_pair_seq: False
