changes to default checkpoint

--- a/config/inference/multi_polymer.yaml
+++ b/config/inference/multi_polymer.yaml
@@ -5,7 +5,8 @@ defaults:
 inference:
   # ckpt_path: /projects/ml/afavor/RFD/models/all_na_ss_cond/train_session2023-12-15_1702680088_BFF_4.pt
   # ckpt_path: /projects/ml/afavor/RFD/models/all_na_ss_cond/train_session2024-01-24_1706161506_BFF_3.00.pt
-  ckpt_path: /projects/ml/afavor/RFD/models/all_na_ss_cond/train_session2024-03-04_1709582096_BFF_2.80.pt
+  # ckpt_path: /projects/ml/afavor/RFD/models/all_na_ss_cond/train_session2024-03-04_1709582096_BFF_2.80.pt
+  ckpt_path: /projects/ml/afavor/RFD/models/all_na_ss_cond/train_session2024-03-19_1710887313_BFF_3.90.pt
   str_self_cond: True
   model_runner: NRBStyleSelfCond
   two_template: True
