--- a/config/inference/multi_polymer.yaml
+++ b/config/inference/multi_polymer.yaml
@@ -21,7 +21,7 @@ inference:
   num_atoms_modeled: 23
   num_atoms_saved: 23
   scaffold_guided: False
-  save_rna_oneletter: True
+  # save_rna_oneletter: True
   # set_diffused_prot_to: 'ALA'
   set_diffused_prot_to: null
   set_diffused_dna_to: null
@@ -53,7 +53,7 @@ preprocess:
 contigmap:
   contigs: ['30']
   polymer_chains: null
-  use_old_receptor_system: False
+  # use_old_receptor_system: False
   
 
 
