many changes for cleaning up codebase

--- a/rf_diffusion/config/inference/aa.yaml
+++ b/rf_diffusion/config/inference/aa.yaml
@@ -3,7 +3,7 @@ defaults:
   - base
 
 inference:
-  ckpt_path: /home/afavor/git/RFD_AF/inputs/ferritin_6i9t.pdb
+  input_pdb: test_data/ferritin_6i9t.pdb
   align_motif: False
   str_self_cond: True
 
