--- a/rf_diffusion/config/inference/multi_polymer.yaml
+++ b/rf_diffusion/config/inference/multi_polymer.yaml
@@ -7,13 +7,13 @@ inference:
   # ckpt_path: /projects/ml/afavor/RFD/models/all_na_ss_cond/train_session2024-01-24_1706161506_BFF_3.00.pt
   # ckpt_path: /projects/ml/afavor/RFD/models/all_na_ss_cond/train_session2024-03-04_1709582096_BFF_2.80.pt
   # ckpt_path: /projects/ml/afavor/RFD/models/all_na_ss_cond/train_session2024-03-19_1710887313_BFF_3.90.pt
-  ckpt_path: /projects/ml/afavor/RFD/models/all_na_ss_cond/train_session2024-07-08_1720455712_BFF_3.00.pt
+  ckpt_path: ${oc.env:RFDPOLY_CKPT_PATH,"weights/train_session2024-07-08_1720455712_BFF_3.00.pt"}
   str_self_cond: True
   model_runner: NRBStyleSelfCond
   two_template: True
   three_template: True
   cautious: True
-  input_pdb: /projects/ml/afavor/test_data/DBP035.pdb
+  input_pdb: test_data/DBP035.pdb
   ij_visible: null
   motif_only_2d: True
   chainbreak_chunks: True
